crates/tests/fixtures/harness/data/error/callback_unexpected_self/input.rdl

#[win32]
mod Test {
    extern fn Handler(&self);
}
        